// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional body 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<div>Demo</div><script src=\\"runtime~main.js\\"></script><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom chunks 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~index.js\\"></script><script src=\\"index.js\\"></script>
    </body>
  </html>"
`;

exports[`custom chunks 2`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~another.js\\"></script><script src=\\"another.js\\"></script>
    </body>
  </html>"
`;

exports[`custom filename 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~main.js\\"></script><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom js attribute 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~main.js\\" defer=\\"defer\\"></script><script src=\\"main.js\\" defer=\\"defer\\"></script>
    </body>
  </html>"
`;

exports[`custom lang 1`] = `
"<!DOCTYPE html>
  <html lang=\\"ru\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~main.js\\"></script><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom publicPath 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"pizza/runtime~main.js\\"></script><script src=\\"pizza/main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom template 1`] = `"<div>Pizza</div>"`;

exports[`custom title 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title>Pizza</title>
      
    </head>
		<body>
			<script src=\\"runtime~main.js\\"></script><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`default options 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
		<body>
			<script src=\\"runtime~main.js\\"></script><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;
